youtube: Avoid cutting off part of thumbnails
I don't remember why this is here, but it causes part of the thumbnail
to be cut off. For now, with no obvious ill effects, remove it.

--- a/css/style.css
+++ b/css/style.css
@@ -262,7 +262,6 @@ iframe {
 .youtube-container {
     position: relative;
     padding-bottom: 56.25%;
-    padding-top: 30px;
     height: 0;
     overflow: hidden;
 }
